--- a/.github/workflows/kvrocks.yaml
+++ b/.github/workflows/kvrocks.yaml
@@ -17,7 +17,9 @@
 
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [unstable]
 
 # Concurrency strategy:
 #   github.workflow: distinguish this workflow from others
