--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -30,7 +30,6 @@ jobs:
     steps:
 
       - uses: actions/checkout@v3
-      
       - name: Cache redis-cli
         id: cache-redis-cli
         uses: actions/cache@v3
@@ -38,7 +37,6 @@ jobs:
           path: |
             ~/local/bin/redis-cli
           key: ubuntu-redis-cli
-  
       - name: Install redis-cli
         if: steps.cache-redis-cli.outputs.cache-hit != 'true'
         run: |
@@ -46,7 +44,9 @@ jobs:
           tar -xzvf redis-6.2.7.tar.gz
           mkdir -p $HOME/local/bin
           pushd redis-6.2.7 && BUILD_TLS=yes make -j$NPROC redis-cli && mv src/redis-cli $HOME/local/bin/ && popd
-
+      - name: Print debug information
+        run: |
+          echo "$HOME"
       - name: Login Docker Hub
         if: (github.event_name != 'pull_request')
         uses: docker/login-action@v1
