--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -45,7 +45,7 @@ jobs:
           tar -xzvf redis-6.2.7.tar.gz
           mkdir -p $HOME/local/bin
           if [ "${{ matrix.arch }}" == "arm64" ]; then
-            sudo apt-get install -y gcc-aarch64-linux-gnu
+            apt-get install -y gcc-aarch64-linux-gnu
             pushd redis-6.2.7 && make CC=aarch64-linux-gnu-gcc MALLOC=libc -j$NPROC redis-cli && mv src/redis-cli $HOME/local/bin/redis-cli-${{ matrix.arch }} && popd
           fi
           if [ "${{ matrix.arch }}" == "amd64" ]; then
@@ -68,6 +68,10 @@ jobs:
           - { target: "linux/arm64", cli_bin: "redis-cli-arm64" }
     steps:
       - uses: actions/checkout@v3
+      - name: Copy redis-cli to tools folder
+        run: |
+          mkdir tools
+          cp ${{ github.workspace }}/${{ matrix.platform.cli_bin }} /tools/${{ matrix.platform.cli_bin }}
       - name: Login Docker Hub
         if: (github.event_name != 'pull_request')
         uses: docker/login-action@v1
