--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -36,8 +36,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/local/bin/redis-cli
-          key: ubuntu-redis-cli-${{ matrix.arch }}
+            ${{ github.workspace }}/redis-cli-${{ matrix.arch }}
+          key: redis-cli-${{ matrix.arch }}
+
       - name: Install redis-cli
         if: steps.cache-redis-cli.outputs.cache-hit != 'true'
         run: |
@@ -51,11 +52,6 @@ jobs:
           if [ "${{ matrix.arch }}" == "amd64" ]; then
             pushd redis-6.2.7 && BUILD_TLS=yes make -j$NPROC redis-cli && mv src/redis-cli ${{ github.workspace }}/redis-cli-${{ matrix.arch }} && popd
           fi
-      - name: Print debug information
-        run: |
-          ls -l $HOME/local/bin/
-          uname -m
-          echo "$HOME"
 
       - name: Upload redis-cli artifact
         uses: actions/upload-artifact@v2
@@ -64,24 +60,27 @@ jobs:
           path: ${{ github.workspace }}/redis-cli-${{ matrix.arch }}
 
   publish-nightly-docker-image:
-    needs: build-redis-cli
     name: Publish nightly Docker image
+    needs: build-redis-cli
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - name: Make tools directory
         run: |
           mkdir tools
+
       - name: Download redis-cli-arm64 artifact
         uses: actions/download-artifact@v2
         with:
           name: redis-cli-arm64
           path: tools
+
       - name: Download redis-cli-amd64 artifact
         uses: actions/download-artifact@v2
         with:
           name: redis-cli-amd64
           path: tools
+
       - name: Login Docker Hub
         if: (github.event_name != 'pull_request')
         uses: docker/login-action@v1
@@ -98,6 +97,9 @@ jobs:
 
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
+
+      - name: Get core numbers
+        run: echo "NPROC=$(nproc)" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
@@ -117,4 +119,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
+            MORE_BUILD_ARGS=-j${{ env.NPROC }}
             TARGET_ARCH=${{ matrix.platform }}
