--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -120,4 +120,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             MORE_BUILD_ARGS=-j${{ env.NPROC }}
-            TARGET_ARCH=${{ matrix.platform }}
+            TARGET_ARCH=${{ platform }}
