--- a/.github/workflows/kvrocks.yaml
+++ b/.github/workflows/kvrocks.yaml
@@ -265,7 +265,7 @@ jobs:
 
   check-docker:
     name: Check Docker image
-    needs: [check-and-lint]
+    needs: [check-and-lint,build-and-test]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
