--- a/.github/workflows/kvrocks.yaml
+++ b/.github/workflows/kvrocks.yaml
@@ -157,6 +157,7 @@ jobs:
       
       - name: Debug print A
         run: |
+          echo "HOME: $HOME"
           ls $HOME/local/bin
       - name: Upload redis-cli artifact
         uses: actions/upload-artifact@v2
